VCI: Integrate FAPI2DiscoveryProfileBehavior into FAPI2ProfileBehavior and adapt VCI variant
This enables us to run the fapi2-security-profile-final-discovery-end-point-verification within the VCI tests.

Fix RFC 8414 well-known URL construction in VCISetDiscoveryUrlFromAuthorizationServer
by reusing OAuthUriUtil.generateWellKnownUrlForPath instead of naive concatenation,
which produced incorrect URLs when the issuer has path components.
Make token_endpoint_auth_methods_supported check profile-aware: plain FAPI requires
private_key_jwt or tls_client_auth, VCI also accepts attest_jwt_client_auth, and
VCI HAIP requires only attest_jwt_client_auth. Extract shared logic into
AbstractCheckDiscEndpointTokenEndpointAuthMethodsSupported.

Also deduplicate OAuth AS metadata URL construction in VCIFetchOAuthorizationServerMetadata
to use the same OAuthUriUtil helper.

Signed-off-by: Thomas Darimont <thomas.darimont@oidf.org>